--- a/core/frame/small/client_manager/BUILD.gn
+++ b/core/frame/small/client_manager/BUILD.gn
@@ -18,7 +18,7 @@ config("client_manager_interface") {
   include_dirs = [ "include" ]
 }
 
-shared_library("client_manager") {
+source_set("client_manager") {
   sources = [ "src/softbus_client_info_manager.c" ]
   include_dirs = [
     "include",
@@ -34,8 +34,7 @@ shared_library("client_manager") {
   ]
   deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
-    "$dsoftbus_root_path/core/common/log:softbus_log",
-    "$dsoftbus_root_path/core/common/utils:softbus_utils",
+    "$dsoftbus_root_path/core/common:dsoftbus_utils",
     "$hilog_lite_deps_path",
     "//third_party/bounds_checking_function:libsec_shared",
   ]
