--- a/core/transmission/BUILD.gn
+++ b/core/transmission/BUILD.gn
@@ -11,9 +11,158 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//build/lite/config/component/lite_component.gni")
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
-lite_component("softbus_server_transmission") {
-  features = [ "session:dsoftbus_trans_session" ]
+config("trans_session_interface") {
+  include_dirs = [
+    "$dsoftbus_root_path/core/transmission/session/include",
+    "$dsoftbus_root_path/core/authentication/interface",
+    "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
+    "$dsoftbus_root_path/core/transmission/trans_channel/auth/include",
+    "$dsoftbus_root_path/interfaces/kits/common",
+  ]
+}
+
+if (defined(ohos_lite)) {
+  import("//build/lite/config/component/lite_component.gni")
+
+  common_include = [
+    "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/core/bus_center/interface",
+    "$softbus_adapter_common/include",
+    "$dsoftbus_root_path/core/connection/interface",
+    "$dsoftbus_root_path/core/transmission/common/include",
+    "$dsoftbus_root_path/core/common/include",
+    "$dsoftbus_root_path/core/common/security/include",
+    "$dsoftbus_root_path/interfaces/kits/bus_center",
+    "$dsoftbus_root_path/interfaces/kits/transport",
+    "$dsoftbus_root_path/core/transmission/trans_channel/auth/include",
+    "$dsoftbus_root_path/core/transmission/trans_channel/proxy/include",
+    "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct/include",
+    "$dsoftbus_root_path/core/bus_center/utils/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
+    "//third_party/cJSON",
+    "$libsec_include_path",
+    "$hilog_lite_include_path",
+    "$dsoftbus_root_path/core/transmission/ipc/include",
+  ]
+
+  common_deps = [
+    "$dsoftbus_root_path/adapter:softbus_adapter",
+    "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
+    "$dsoftbus_root_path/core/bus_center:dsoftbus_bus_center_server",
+    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
+    "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
+    "$dsoftbus_root_path/core/common:dsoftbus_utils",
+    "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
+    "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
+    "$dsoftbus_root_path/core/transmission/trans_channel/udp_negotiation:dsoftbus_trans_udp_channel",
+    "$hilog_lite_deps_path",
+  ]
+
+  if (ohos_kernel_type == "liteos_m") {
+    source_set("dsoftbus_trans_session") {
+      include_dirs = common_include
+      include_dirs += [ "$dsoftbus_root_path/core/transmission/trans_channel/udp_negotiation/include" ]
+      sources = [
+        "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_manager.c",
+        "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_message.c",
+        "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_callback.c",
+        "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_manager.c",
+        "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_lane_manager.c",
+        "$dsoftbus_root_path/core/transmission/session/src/trans_session_manager.c",
+        "$dsoftbus_root_path/core/transmission/session/src/trans_session_service.c",
+        "$dsoftbus_root_path/core/transmission/ipc/mini/trans_client_proxy.c",
+      ]
+
+      public_configs = [ ":trans_session_interface" ]
+      deps = common_deps
+      deps += [ "//build/lite/config/component/cJSON:cjson_static" ]
+    }
+  } else {
+    source_set("dsoftbus_trans_session") {
+      include_dirs = common_include
+      cflags = [
+        "-Wall",
+        "-fPIC",
+      ]
+      sources = [
+        "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_manager.c",
+        "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_message.c",
+        "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_callback.c",
+        "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_manager.c",
+        "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_lane_manager.c",
+        "$dsoftbus_root_path/core/transmission/session/src/trans_session_manager.c",
+        "$dsoftbus_root_path/core/transmission/session/src/trans_session_service.c",
+        "$dsoftbus_root_path/core/transmission/ipc/small/trans_client_proxy.c",
+      ]
+
+      public_configs = [ ":trans_session_interface" ]
+      deps = common_deps
+      deps += [
+        "$hilog_lite_deps_path",
+        "//build/lite/config/component/cJSON:cjson_shared",
+        "//third_party/bounds_checking_function:libsec_shared",
+        "//foundation/communication/ipc_lite:liteipc_adapter",
+        "$dsoftbus_root_path/core/frame/small/client_manager:client_manager",
+      ]
+    }
+  }
+} else {
+  import("//build/ohos.gni")
+
+  ohos_shared_library("dsoftbus_trans_session") {
+    include_dirs = [
+      "$softbus_adapter_common/include",
+      "$dsoftbus_root_path/core/transmission/common/include",
+      "$dsoftbus_root_path/core/common/include",
+      "$dsoftbus_root_path/core/common/security/include",
+      "$dsoftbus_root_path/interfaces/kits/bus_center",
+      "$dsoftbus_root_path/interfaces/kits/transport",
+      "$dsoftbus_root_path/core/connection/interface",
+      "$dsoftbus_root_path/core/transmission/ipc/include",
+      "$dsoftbus_root_path/core/transmission/trans_channel/auth/include",
+      "$dsoftbus_root_path/core/bus_center/utils/include",
+      "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
+      "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
+      "//third_party/cJSON",
+    ]
+    sources = [
+      "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_manager.c",
+      "$dsoftbus_root_path/core/transmission/trans_channel/auth/src/trans_auth_message.c",
+      "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_callback.c",
+      "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_channel_manager.c",
+      "$dsoftbus_root_path/core/transmission/trans_channel/manager/src/trans_lane_manager.c",
+      "$dsoftbus_root_path/core/transmission/session/src/trans_session_manager.c",
+      "$dsoftbus_root_path/core/transmission/session/src/trans_session_service.c",
+      "$dsoftbus_root_path/core/transmission/ipc/standard/src/trans_client_proxy.cpp",
+      "$dsoftbus_root_path/core/transmission/ipc/standard/src/trans_client_proxy_standard.cpp",
+    ]
+    public_configs = [ ":trans_session_interface" ]
+    if (is_standard_system) {
+      external_deps = [
+        "hiviewdfx_hilog_native:libhilog",
+        "ipc:ipc_core",
+      ]
+    }
+    deps = [
+      "$dsoftbus_core_path/common/security/permission:softbus_permission",
+      "$dsoftbus_root_path/adapter:softbus_adapter",
+      "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
+      "$dsoftbus_root_path/core/bus_center:dsoftbus_bus_center_server",
+      "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager:dsoftbus_bus_center_hub",
+      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
+      "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
+      "$dsoftbus_root_path/core/common:dsoftbus_utils",
+      "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
+      "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
+      "$dsoftbus_root_path/core/transmission/trans_channel/udp_negotiation:dsoftbus_trans_udp_channel",
+      "$dsoftbus_root_path/core/frame/standard/softbusdata:softbus_server_data",
+      "//utils/native/base:utilsecurec_shared",
+      "//utils/native/base:utils",
+    ]
+    part_name = "dsoftbus_standard"
+    subsystem_name = "communication"
+  }
 }
