--- a/sdk/frame/BUILD.gn
+++ b/sdk/frame/BUILD.gn
@@ -17,7 +17,7 @@ if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
 
   if (ohos_kernel_type == "liteos_m") {
-    static_library("softbus_client_frame") {
+    source_set("softbus_client_frame") {
       include_dirs = [
         "include",
         "$softbus_adapter_common/include",
@@ -49,12 +49,12 @@ if (defined(ohos_lite)) {
       ]
 
       deps = [
-        "$dsoftbus_root_path/core/common/log:softbus_log",
+        "$dsoftbus_root_path/core/common:dsoftbus_utils",
         "$hilog_lite_deps_path",
       ]
     }
   } else {
-    shared_library("softbus_client_frame") {
+    source_set("softbus_client_frame") {
       include_dirs = [
         "common/include",
         "small/include",
@@ -79,13 +79,16 @@ if (defined(ohos_lite)) {
         "small/src/trans_client_stub.c",
       ]
 
+      cflags = [
+        "-Wall",
+        "-fPIC",
+      ]
+
       defines = [ "SOFTBUS_WATCH" ]
 
       deps = [
         "$dsoftbus_root_path/adapter:softbus_adapter",
-        "$dsoftbus_root_path/core/common/log:softbus_log",
-        "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
-        "$dsoftbus_root_path/core/common/utils:softbus_utils",
+        "$dsoftbus_root_path/core/common:dsoftbus_utils",
         "$dsoftbus_root_path/sdk/bus_center:dsoftbus_bus_center_manager_sdk",
         "$dsoftbus_root_path/sdk/discovery:dsoftbus_disc_manager_sdk",
         "$dsoftbus_root_path/sdk/transmission:dsoftbus_trans_session_manager_sdk",
@@ -133,9 +136,7 @@ if (defined(ohos_lite)) {
         "ipc:ipc_single",
       ]
       deps = [
-        "$dsoftbus_root_path/core/common/log:softbus_log",
-        "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
-        "$dsoftbus_root_path/core/common/utils:softbus_utils",
+        "$dsoftbus_root_path/core/common:dsoftbus_utils",
         "$dsoftbus_root_path/sdk/bus_center:dsoftbus_bus_center_manager_sdk",
         "$dsoftbus_root_path/sdk/discovery:dsoftbus_disc_manager_sdk",
         "$dsoftbus_root_path/sdk/transmission:dsoftbus_trans_session_manager_sdk",
