--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -16,6 +16,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 if (ohos_kernel_type == "liteos_m") {
   static_library("softbus_server_frame") {
+    complete_static_lib = true
     include_dirs = [
       "include",
       "$softbus_adapter_common/include",
@@ -39,13 +40,11 @@ if (ohos_kernel_type == "liteos_m") {
 
     deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
-      "$dsoftbus_root_path/core/common/log:softbus_log",
-      "$dsoftbus_root_path/core/common/message_handler:message_handler",
-      "$dsoftbus_root_path/core/common/utils:softbus_utils",
+      "$dsoftbus_root_path/core/common:dsoftbus_utils",
     ]
   }
 } else {
-  shared_library("softbus_server_frame") {
+  source_set("softbus_server_frame") {
     include_dirs = [
       "common/include",
       "small/init/include",
@@ -85,14 +84,12 @@ if (ohos_kernel_type == "liteos_m") {
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
       "$dsoftbus_root_path/core/bus_center:dsoftbus_bus_center_server",
-      "$dsoftbus_root_path/core/common/log:softbus_log",
-      "$dsoftbus_root_path/core/common/message_handler:message_handler",
       "$dsoftbus_root_path/core/common/security/permission:softbus_permission",
-      "$dsoftbus_root_path/core/common/utils:softbus_utils",
-      "$dsoftbus_root_path/core/connection:softbus_connection",
+      "$dsoftbus_root_path/core/common:dsoftbus_utils",
+      "$dsoftbus_root_path/core/connection:conn_manager",
       "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
       "$dsoftbus_root_path/core/frame/small/client_manager:client_manager",
-      "$dsoftbus_root_path/core/transmission/session:dsoftbus_trans_session",
+      "$dsoftbus_root_path/core/transmission:dsoftbus_trans_session",
       "$hilog_lite_deps_path",
       "//foundation/communication/ipc_lite:liteipc_adapter",
       "//foundation/distributedschedule/samgr_lite/samgr:samgr",
