--- a/core/frame/standard/server/BUILD.gn
+++ b/core/frame/standard/server/BUILD.gn
@@ -55,14 +55,11 @@ ohos_shared_library("softbus_server") {
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
     "$dsoftbus_root_path/core/bus_center:dsoftbus_bus_center_server",
-    "$dsoftbus_root_path/core/common/log:softbus_log",
-    "$dsoftbus_root_path/core/common/message_handler:message_handler",
-    "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
-    "$dsoftbus_root_path/core/common/utils:softbus_utils",
-    "$dsoftbus_root_path/core/connection/manager:conn_manager",
+    "$dsoftbus_root_path/core/common:dsoftbus_utils",
+    "$dsoftbus_root_path/core/connection:conn_manager",
     "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
     "$dsoftbus_root_path/core/frame/standard/softbusdata:softbus_server_data",
-    "$dsoftbus_root_path/core/transmission/session:dsoftbus_trans_session",
+    "$dsoftbus_root_path/core/transmission:dsoftbus_trans_session",
     "//utils/native/base:utils",
   ]
   if (is_standard_system) {
