--- a/core/frame/standard/softbusdata/BUILD.gn
+++ b/core/frame/standard/softbusdata/BUILD.gn
@@ -34,7 +34,7 @@ ohos_shared_library("softbus_server_data") {
 
     deps = [
       "//utils/native/base:utils",
-      "$dsoftbus_root_path/core/common/log:softbus_log",
+      "$dsoftbus_root_path/core/common:dsoftbus_utils",
     ]
     part_name = "dsoftbus_standard"
   }
