--- a/core/transmission/trans_channel/udp_negotiation/BUILD.gn
+++ b/core/transmission/trans_channel/udp_negotiation/BUILD.gn
@@ -43,8 +43,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
-      "$dsoftbus_root_path/core/common/json_utils:json_utils",
-      "$dsoftbus_root_path/core/common/utils:softbus_utils",
+      "$dsoftbus_root_path/core/common:dsoftbus_utils",
       "$hilog_lite_deps_path",
       "$libsec_deps_path",
     ]
@@ -68,7 +67,7 @@ if (defined(ohos_lite)) {
   ]
 
   if (ohos_kernel_type == "liteos_m") {
-    static_library("dsoftbus_trans_udp_channel") {
+    source_set("dsoftbus_trans_udp_channel") {
       include_dirs = common_include
       sources = common_src
       public_configs = [ ":trans_udp_channel_interface" ]
@@ -76,7 +75,7 @@ if (defined(ohos_lite)) {
       deps += [ "//build/lite/config/component/cJSON:cjson_static" ]
     }
   } else {
-    shared_library("dsoftbus_trans_udp_channel") {
+    source_set("dsoftbus_trans_udp_channel") {
       sources = common_src
       include_dirs = common_include
       public_configs = [ ":trans_udp_channel_interface" ]
@@ -109,10 +108,9 @@ if (defined(ohos_lite)) {
     public_configs = [ ":trans_udp_channel_interface" ]
 
     deps = [
-      "$dsoftbus_core_path/common/utils:softbus_utils",
+      "$dsoftbus_root_path/core/common:dsoftbus_utils",
       "$dsoftbus_core_path/connection/common:conn_common",
       "$dsoftbus_core_path/transmission/common:dsoftbus_trans_common",
-      "$dsoftbus_core_path/transmission/ipc:dsoftbus_trans_ipc_proxy",
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
       "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
