--- a/sdk/bus_center/service/BUILD.gn
+++ b/sdk/bus_center/service/BUILD.gn
@@ -16,7 +16,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
   if (ohos_kernel_type == "liteos_m") {
-    static_library("dsoftbus_bus_center_service_sdk") {
+    source_set("dsoftbus_bus_center_service_sdk") {
       include_dirs = [
         "include",
         "$dsoftbus_root_path/core/common/include",
@@ -28,7 +28,7 @@ if (defined(ohos_lite)) {
       sources = [ "src/client_bus_center.c" ]
     }
   } else {
-    shared_library("dsoftbus_bus_center_service_sdk") {
+    source_set("dsoftbus_bus_center_service_sdk") {
       include_dirs = [
         "include",
         "$dsoftbus_root_path/core/common/include",
@@ -41,9 +41,13 @@ if (defined(ohos_lite)) {
         "$hilog_lite_include_path",
       ]
       sources = [ "src/client_bus_center.c" ]
+      cflags = [
+        "-Wall",
+        "-fPIC",
+      ]
       deps = [
         "$dsoftbus_root_path/adapter:softbus_adapter",
-        "$dsoftbus_root_path/core/common/utils:softbus_utils",
+        "$dsoftbus_root_path/core/common:dsoftbus_utils",
         "$dsoftbus_root_path/sdk/bus_center:dsoftbus_bus_center_manager_sdk",
         "$dsoftbus_root_path/sdk/frame:softbus_client_frame",
         "$hilog_lite_deps_path",
@@ -67,7 +71,7 @@ if (defined(ohos_lite)) {
     sources = [ "src/client_bus_center.c" ]
     deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
-      "$dsoftbus_root_path/core/common/utils:softbus_utils",
+      "$dsoftbus_root_path/core/common:dsoftbus_utils",
       "$dsoftbus_root_path/sdk/bus_center:dsoftbus_bus_center_manager_sdk",
       "$dsoftbus_root_path/sdk/frame:softbus_client_frame",
     ]
