--- a/sdk/transmission/session/BUILD.gn
+++ b/sdk/transmission/session/BUILD.gn
@@ -36,10 +36,8 @@ if (defined(ohos_lite)) {
   ]
 
   common_deps = [
-    "$dsoftbus_core_path/common/utils:softbus_utils",
+    "$dsoftbus_root_path/core/common:dsoftbus_utils",
     "$dsoftbus_root_path/adapter:softbus_adapter",
-    "$dsoftbus_root_path/core/common/json_utils:json_utils",
-    "$dsoftbus_root_path/core/common/log:softbus_log",
     "$dsoftbus_sdk_path/frame:softbus_client_frame",
     "$dsoftbus_sdk_path/transmission:dsoftbus_trans_session_manager_sdk",
     "$dsoftbus_sdk_path/transmission/ipc:dsoftbus_trans_ipc_proxy_sdk",
@@ -48,7 +46,7 @@ if (defined(ohos_lite)) {
   ]
 
   if (ohos_kernel_type == "liteos_m") {
-    static_library("dsoftbus_trans_session_sdk") {
+    source_set("dsoftbus_trans_session_sdk") {
       include_dirs = common_include
       include_dirs += [
         "$dsoftbus_root_path/sdk/transmission/trans_channel/manager/include",
@@ -58,7 +56,7 @@ if (defined(ohos_lite)) {
       deps = common_deps
     }
   } else {
-    shared_library("dsoftbus_trans_session_sdk") {
+    source_set("dsoftbus_trans_session_sdk") {
       include_dirs = common_include
       cflags = [
         "-Wall",
@@ -97,9 +95,7 @@ if (defined(ohos_lite)) {
     ]
     sources += common_src
     deps = [
-      "$dsoftbus_root_path/core/common/json_utils:json_utils",
-      "$dsoftbus_root_path/core/common/log:softbus_log",
-      "$dsoftbus_root_path/core/common/utils:softbus_utils",
+      "$dsoftbus_root_path/core/common:dsoftbus_utils",
       "$dsoftbus_sdk_path/bus_center/service:dsoftbus_bus_center_service_sdk",
       "$dsoftbus_sdk_path/frame:softbus_client_frame",
       "$dsoftbus_sdk_path/transmission:dsoftbus_trans_session_manager_sdk",
