--- a/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/BUILD.gn
+++ b/sdk/transmission/trans_channel/udp/stream/libsoftbus_stream/BUILD.gn
@@ -17,10 +17,11 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 config("stream_config") {
   defines = [ "FILLP_LINUX" ]
   cflags_cc = [ "-std=c++14" ]
+  cflags_cc += [ "-fPIC" ]
   ldflags = [ "-lstdc++" ]
 }
 
-shared_library("libsoftbus_stream") {
+source_set("libsoftbus_stream") {
   configs -= [ "//build/lite/config:language_cpp" ]
   configs += [ ":stream_config" ]
 
@@ -59,8 +60,7 @@ shared_library("libsoftbus_stream") {
   deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/components/nstackx_enhanced/fillp:Dstream",
-    "$dsoftbus_root_path/core/common:softbus_core_common",
-    "$dsoftbus_root_path/core/common/log:softbus_log",
+    "$dsoftbus_root_path/core/common:dsoftbus_utils",
     "//third_party/bounds_checking_function:libsec_shared",
   ]
   deps += [ "$hilog_lite_deps_path" ]
