--- a/adapter/common/bus_center/BUILD.gn
+++ b/adapter/common/bus_center/BUILD.gn
@@ -11,7 +11,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//foundation/appexecfwk/standard/appexecfwk.gni")
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 config("bus_center_monitor_interface") {
@@ -123,7 +122,7 @@ if (defined(ohos_lite)) {
       "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
       "$dsoftbus_root_path/core/common/log:softbus_log",
       "$dsoftbus_root_path/core/common/message_handler:message_handler",
-      "${aafwk_path}/interfaces/innerkits/want:want",
+      "//foundation/aafwk/standard/interfaces/innerkits/want:want",
       "//utils/native/base:utils",
     ]
     if (is_standard_system) {
